Fix alignmenet and position for mobile screens

--- a/style.css
+++ b/style.css
@@ -295,6 +295,7 @@ footer .container p {
 .quote-container {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
     width: 100%;
 }
@@ -342,6 +343,10 @@ footer .container p {
     z-index: 99;
 }
 
+.short-text {
+    display: none;
+}
+
 @media screen and (max-width: 1340px) {
     #btn-top {
         display: none;
@@ -368,5 +373,36 @@ footer .container p {
         order: -1;
         margin: 0;
         margin-bottom: 32px;
+    }
+}
+
+@media screen and (max-width: 515px) {
+    .navbar .container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .navbar .container ul {
+        flex-direction: column;
+        align-items: center;
+        gap: 0px;
+    }
+}
+
+@media screen and (max-width: 450px) {
+    .hero {
+        margin: 120px 0px;
+    }
+
+    .boxes .box {
+        width: 300px;
+    }
+
+    .full-text {
+        display: none;
+    }
+
+    .short-text {
+        display: block;
     }
 }
